--- a/index.html
+++ b/index.html
@@ -54,23 +54,23 @@
   
   
   <div class="info">
-    <img src="./imagenes/hoja1.jpg" alt="">
+    <img src="./imagenes/marcador-de-posicion.png" alt="">
     <h4>Fecha: Sabado 11 de Marzo</h4>
-    <p class="parrafo"> hs --<br> Calle:---</p> <br>
+    <p class="parrafo">Horario: 21 hs hasta 5 am.<br> Calle: Av. 101 Dr. Ricardo Balbín 5580, Billinghurst.   </p> 
     <button class="click" id="btn">Ver ubicación</button>
   </div>
 
 
   <div class="info">
-    <h4>Valor de la Tarjeta</h4>
-    <img src="./imagenes/regalo.gif" alt="">
-    <p class="parrafo">---</p> 
+    <h4>¿Querés hacerme un regalo?</h4>
+    <img src="./imagenes/regalo.png" alt="">
+    <p class="parrafo">“Si deseas hacerme un regalo, y no sabes que… lo podes colocar en un sobre ya que habrá un cofre en el salón”</p> 
   </div>
 
   <div class="info">
     <h4>Confirma tu asistencia</h4>
-    <img src="./imagenes/regalo.gif" alt="">
-    <p class="parrafo">-Tenes tiempo hasta--</p> 
+    <img src="./imagenes/whatsapp.png" alt="">
+    <p class="parrafo">Tenes tiempo hasta: 1 de Marzo</p> 
   </div>
 
   <h1 class="espero">Te espero <br>Jazmín</h1>
