--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css2?family=Abel&family=Aboreto&family=Arima:wght@100&family=Assistant:wght@200&family=Cormorant+SC:wght@300&family=Dosis:wght@200&family=DynaPuff&family=Great+Vibes&family=IBM+Plex+Sans:wght@100&family=Merienda&family=Qwigley&family=Rampart+One&family=Rochester&family=Sacramento&family=Square+Peg&family=Tangerine&family=Tinos&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Amatic+SC&display=swap" rel="stylesheet">
+  <style> @import url('https://fonts.googleapis.com/css2?family=Amatic+SC&family=Bebas+Neue&family=EB+Garamond&family=Lobster+Two&family=Major+Mono+Display&family=Passions+Conflict&family=Pompiere&family=Roboto+Condensed:wght@300&family=Sacramento&display=swap'); </style>
+  <style> @import url('https://fonts.googleapis.com/css2?family=Amatic+SC&family=Bebas+Neue&family=EB+Garamond&family=Lobster+Two&family=Major+Mono+Display&family=Passions+Conflict&family=Pompiere&family=Rancho&family=Roboto+Condensed:wght@300&family=Sacramento&family=Satisfy&display=swap'); </style>
+ 
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <title>Cumple 15 Jazmín</title>
 
@@ -20,8 +23,8 @@
   <img src="./imagenes/NOMBRE.jpg" alt="">
  </div>
 
-  <h1 class="titulo_primero"> ¡Te invito a que me acompañes en este gran dia!<b class="f"></b> <span class="primer_span"
-      style="font-size: x-large;"><b></b></span><br>Jazmín <b>♡</b></h1>
+  <h1 class="titulo_primero"> ¡Te invito a que me acompañes en este gran dia! <span class="primer_span">Jazmín ♡</span>
+     </h1>
 
     <div class="pareja">
       <img src="./imagenes/pareja-de-boda.png" alt="" srcset="">
@@ -54,19 +57,19 @@
   
   
   <div class="info">
+    <h4>Sabado 11 de Marzo</h4>
     <img src="./imagenes/marcador-de-posicion.png" alt="">
-    <h4>Fecha: Sabado 11 de Marzo</h4>
-    <p class="parrafo">Horario: 21 hs hasta 5 am.<br> Calle: Av. 101 Dr. Ricardo Balbín 5580, Billinghurst.   </p> 
+    <p class="parrafo">Horario: 21:00 hs hasta 5 am.<br> Calle: Av. 101 Dr. Ricardo Balbín 5580, Billinghurst.   </p> 
     <button class="click" id="btn">Ver ubicación</button>
   </div>
-
+<br>
 
   <div class="info">
     <h4>¿Querés hacerme un regalo?</h4>
     <img src="./imagenes/regalo.png" alt="">
     <p class="parrafo">“Si deseas hacerme un regalo, y no sabes que… lo podes colocar en un sobre ya que habrá un cofre en el salón”</p> 
   </div>
-
+<br>
   <div class="info">
     <h4>Confirma tu asistencia</h4>
     <img src="./imagenes/whatsapp.png" alt="">
@@ -74,16 +77,10 @@
   </div>
 
   <h1 class="espero">Te espero <br>Jazmín</h1>
-  <img class="frasco" src="./IMAGENES/60instagramhighlighticons98_112133.png" alt="">
+  <img class="confeti" src="./imagenes/confetti-48.gif" alt="">
 
 
-    <footer>
-  <div class="box__copyright">
-    
-      <hr>
-      <p>Todos los derechos reservados © 2022 <b>VeronicaTrejo Contacto:veronicatrejo.22@gmail.com </b></p>
-  </div>
-</footer>
+   
 
 
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
