--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <img src="./imagenes/NOMBRE.jpg" alt="">
  </div>
 
-  <h1 class="titulo_primero"> ¡Te invito a que me acompañes en este gran dia! <span class="primer_span">Jazmín ♡</span>
+  <h1 class="titulo_primero"> ¡Te invito a que me acompañes en este gran dia! <br><span class="primer_span">Jazmín ♡</span>
      </h1>
 
     <div class="pareja">
@@ -59,6 +59,7 @@
   <div class="info">
     <h4>Sabado 11 de Marzo</h4>
     <img src="./imagenes/marcador-de-posicion.png" alt="">
+    <br>
     <p class="parrafo">Horario: 21:00 hs hasta 5 am.<br> Calle: Av. 101 Dr. Ricardo Balbín 5580, Billinghurst.   </p> 
     <button class="click" id="btn">Ver ubicación</button>
   </div>
@@ -67,6 +68,7 @@
   <div class="info">
     <h4>¿Querés hacerme un regalo?</h4>
     <img src="./imagenes/regalo.png" alt="">
+    <br>
     <p class="parrafo">“Si deseas hacerme un regalo, y no sabes que… lo podes colocar en un sobre ya que habrá un cofre en el salón”</p> 
   </div>
 <br>
