--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Amatic+SC&display=swap" rel="stylesheet">
   <style> @import url('https://fonts.googleapis.com/css2?family=Amatic+SC&family=Bebas+Neue&family=EB+Garamond&family=Lobster+Two&family=Major+Mono+Display&family=Passions+Conflict&family=Pompiere&family=Roboto+Condensed:wght@300&family=Sacramento&display=swap'); </style>
   <style> @import url('https://fonts.googleapis.com/css2?family=Amatic+SC&family=Bebas+Neue&family=EB+Garamond&family=Lobster+Two&family=Major+Mono+Display&family=Passions+Conflict&family=Pompiere&family=Rancho&family=Roboto+Condensed:wght@300&family=Sacramento&family=Satisfy&display=swap'); </style>
- 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Amatic+SC&family=Bebas+Neue&family=EB+Garamond&family=Lobster+Two&family=Major+Mono+Display&family=Passions+Conflict&family=Pompiere&family=Rancho&family=Roboto+Condensed:wght@300&family=Sacramento&family=Satisfy&family=Sofia+Sans+Extra+Condensed:wght@100&family=Stint+Ultra+Condensed&display=swap" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <title>Cumple 15 Jazmín</title>
 
@@ -23,7 +25,7 @@
   <img src="./imagenes/NOMBRE.jpg" alt="">
  </div>
 
-  <h1 class="titulo_primero"> ¡Te invito a que me acompañes en este gran dia! <br><span class="primer_span">Jazmín ♡</span>
+  <h1 class="titulo_primero"> ¡Te invito a que me acompañes <br> en este gran dia! <br><span class="primer_span">Jazmín ♡</span>
      </h1>
 
     <div class="pareja">
@@ -58,8 +60,9 @@
   
   <div class="info">
     <h4>Sabado 11 de Marzo</h4>
-    <img src="./imagenes/marcador-de-posicion.png" alt="">
     <br>
+    <img src="./imagenes/puntero-de-ubicacion.png" alt="">
+    
     <p class="parrafo">Horario: 21:00 hs hasta 5 am.<br> Calle: Av. 101 Dr. Ricardo Balbín 5580, Billinghurst.   </p> 
     <button class="click" id="btn">Ver ubicación</button>
   </div>
@@ -67,7 +70,7 @@
 
   <div class="info">
     <h4>¿Querés hacerme un regalo?</h4>
-    <img src="./imagenes/regalo.png" alt="">
+    <img src="./imagenes/caja-de-regalo.png" alt="">
     <br>
     <p class="parrafo">“Si deseas hacerme un regalo, y no sabes que… lo podes colocar en un sobre ya que habrá un cofre en el salón”</p> 
   </div>
@@ -77,9 +80,9 @@
     <img src="./imagenes/whatsapp.png" alt="">
     <p class="parrafo">Tenes tiempo hasta: 1 de Marzo</p> 
   </div>
-
+<br>
   <h1 class="espero">Te espero <br>Jazmín</h1>
-  <img class="confeti" src="./imagenes/confetti-48.gif" alt="">
+  
 
 
    
