--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
   </div>
 <br>
   <div class="info">
-    <h4>Confirma tu asistencia</h4>
+    <h4>Confirmá tu asistencia <br> presionando el icono de whatsApp</h4>
     <a href="https://wa.me/+5491176415709?" target="_blank">
       <img class="boton" src="imagenes/whatsapp.png" alt="">
   </a>
